--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,32 @@
 *.png
 *.pdf
 *.jpg
-*StdPeriph_lib/
-*settings/
-*Release/
-*Debug/
+*.ewt
+*.ewd
+*.dep
+*.ioc8
+*.log
+
+StdPeriph_lib/
+settings/
+Release/
+Debug/
+
+# IAR Settings  
+**/settings/*.crun  
+**/settings/*.dbgdt  
+**/settings/*.cspy  
+**/settings/*.cspy.*  
+**/settings/*.xcl  
+**/settings/*.dni  
+**/settings/*.wsdt  
+**/settings/*.wspos  
+
+# IAR Debug Exe  
+**/Exe/*.sim  
+
+# IAR Debug Obj  
+**/Obj/*.pbd  
+**/Obj/*.pbd.*  
+**/Obj/*.pbi  
+**/Obj/*.pbi.*  
